user route, add post modelUser and normalUser
