# src/app/docs/openapi.yaml
@@ -8,18 +8,9 @@ info:
   license:
     name: "MIT"
     url: http://localhost
-servers:
+servers: 
   - url: http://localhost:{port}/{basePath}
     description: Development Server
-    variables:
-      port:
-        enum:
-          - "7000"
-        default: "7000"
-      basePath:
-        default: api/v1
-  - url: http://localhost:{port}/{basePath}
-    description: Production Server
     variables:
       port:
         enum:
@@ -72,12 +63,12 @@ paths:
 
   # Routes #
 
-  /product:
+  /user/modelUser:
     post:
       tags:
-        - Product
-      summary: Armazenar dados da consulta Product
-      operationId: post Product
+        - User
+      summary: Cadastra modelUser
+      operationId: post modelUser
       security:
         - ApiKeyAuth: []
       requestBody:
@@ -86,20 +77,18 @@ paths:
             schema:
               type: object
               properties:
-                productName:
+                email:
                   type: string
-                price:
-                  type: number
-                amount:
-                  type: number
-
+                  format: email
+                password:
+                  type: string
       responses:
         201:
-          description: POST Product
+          description: POST modelUser
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/product"
+                $ref: "#/components/schemas/modelUser"
         401:
           description: UNAUTHORIZED
           content:
@@ -112,31 +101,32 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/errorResponse"
-    put:
-      security:
-        - BearerAuth: []
+  /user/normalUser:
+    post:
       tags:
-        - Product
-      summary: Altera dados da consulta Product
-      operationId: put Product
+        - User
+      summary: Cadastra normalUser
+      operationId: post normalUser
+      security:
+        - ApiKeyAuth: []
       requestBody:
         content:
           application/json:
             schema:
               type: object
               properties:
-                productName:
+                email:
                   type: string
-                id:
-                  type: number
-
+                  format: email
+                password:
+                  type: string
       responses:
         201:
-          description: put Product
+          description: POST normalUser
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/product-put"
+                $ref: "#/components/schemas/normalUser"
         401:
           description: UNAUTHORIZED
           content:
@@ -149,78 +139,111 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/errorResponse"
-    delete:
-      security:
-        - BearerAuth: []
-      tags:
-        - Product
-      summary: Deleta dados da consulta Product
-      operationId: delete Product
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                id:
-                  type: number
+  #   put:
+  #     security:
+  #       - BearerAuth: []
+  #     tags:
+  #       - Product
+  #     summary: Altera dados da consulta Product
+  #     operationId: put Product
+  #     requestBody:
+  #       content:
+  #         application/json:
+  #           schema:
+  #             type: object
+  #             properties:
+  #               productName:
+  #                 type: string
+  #               id:
+  #                 type: number
 
-      responses:
-        201:
-          description: deleta Product
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/product-deleta"
-        401:
-          description: UNAUTHORIZED
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/errorResponse"
-        500:
-          description: INTERNAL_SERVER_ERROR
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/errorResponse"            
+  #     responses:
+  #       201:
+  #         description: put Product
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/product-put"
+  #       401:
+  #         description: UNAUTHORIZED
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/errorResponse"
+  #       500:
+  #         description: INTERNAL_SERVER_ERROR
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/errorResponse"
+  #   delete:
+  #     security:
+  #       - BearerAuth: []
+  #     tags:
+  #       - Product
+  #     summary: Deleta dados da consulta Product
+  #     operationId: delete Product
+  #     requestBody:
+  #       content:
+  #         application/json:
+  #           schema:
+  #             type: object
+  #             properties:
+  #               id:
+  #                 type: number
+
+  #     responses:
+  #       201:
+  #         description: deleta Product
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/product-deleta"
+  #       401:
+  #         description: UNAUTHORIZED
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/errorResponse"
+  #       500:
+  #         description: INTERNAL_SERVER_ERROR
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/errorResponse"            
   
-  #getproduct route#
-  /product/{productName}:
-    get:
-      tags:
-        - Product
-      summary: Recupera dados do produto pelo productName
-      operationId: getProduct
-      security:
-        - BearerAuth: []
-      parameters:
-        - in: path
-          name: productName
-          required: true
-          schema:
-            type: string  
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/apiResponse" 
-        500:
-          description: INTERNAL_SERVER_ERROR
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/errorResponse" 
+  # #getproduct route#
+  # /product/{productName}:
+  #   get:
+  #     tags:
+  #       - Product
+  #     summary: Recupera dados do produto pelo productName
+  #     operationId: getProduct
+  #     security:
+  #       - BearerAuth: []
+  #     parameters:
+  #       - in: path
+  #         name: productName
+  #         required: true
+  #         schema:
+  #           type: string  
+  #     responses:
+  #       200:
+  #         description: OK
+  #         content:
+  #           application/json:
+  #             schema:
+  #               type: array
+  #               items:
+  #                 $ref: "#/components/schemas/apiResponse" 
+  #       500:
+  #         description: INTERNAL_SERVER_ERROR
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/errorResponse" 
 components:
   securitySchemes:
-    BearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
     ApiKeyAuth:
       type: apiKey
       in: header
@@ -243,24 +266,19 @@ components:
       properties:
         data:
           type: object
-    product:
+    normalUser:
       type: object
       properties:
-        productName:
+        email:
+          format: email
           type: string
-        price:
+        password:
           type: integer
-        amount:
-          type: integer
-    product-put:
+    modelUser:
       type: object
       properties:
-        productName:
+        email:
+          format: email
           type: string
-        id:
-          type: integer
-    product-deleta:
-      type: object
-      properties:
-        id:
+        password:
           type: integer
